[gd_scene load_steps=14 format=3 uid="uid://tqgpyanq63jt"]

[ext_resource type="Texture2D" uid="uid://hbl52m1it7q6" path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Character_2.png" id="1_1wfyq"]
[ext_resource type="Script" path="res://boss.gd" id="1_ik4hr"]
[ext_resource type="PackedScene" uid="uid://dybxuygy1tlof" path="res://boss_bullet.tscn" id="2_mubye"]
[ext_resource type="Texture2D" uid="uid://be0n3d1rbed8w" path="res://pixil-frame-0(3).png" id="3_g2215"]
[ext_resource type="Texture2D" uid="uid://d2m0elpcnwgi0" path="res://pixil-frame-0(4).png" id="4_1udl7"]
[ext_resource type="AudioStream" uid="uid://ddckkcwmo60kj" path="res://8_bit,_enemy_death_s.mp3" id="6_vtmld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nowwf"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1otlk"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xs300"]
size = Vector2(14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5mpe"]
atlas = ExtResource("1_1wfyq")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lray4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5mpe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i16br"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fxb0"]

[node name="Boss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(2.515, 2.515)
collision_mask = 2
script = ExtResource("1_ik4hr")
projectile_scene = ExtResource("2_mubye")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_nowwf")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_1otlk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xs300")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lray4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
texture_repeat = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(9.295, 9.295)
pivot_offset = Vector2(31.9418, 32.3928)
size_flags_horizontal = 2
texture_under = ExtResource("3_g2215")
texture_progress = ExtResource("4_1udl7")

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("RectangleShape2D_i16br")

[node name="ExitDetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDetectionRange"]
shape = SubResource("RectangleShape2D_6fxb0")

[node name="ChargeTimer" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vtmld")
